# hacker-news-bot

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
hacker_news_bot/: configure.py  main.py  toot_formatter.py  translator.py
hacker_news_bot/datasources/: db.py  hacker_news.py
hacker_news_bot/datasources/hacker_news/: __init__.py  api.py  datasource.py  definitions.py
hacker_news_bot/datasources/mastodon/: __init__.py  datasource.py  definitions.py
